<resources>
    <string name="app_name">Parents</string>
    <string name="medically_exam">体检</string>
    <string name="sms">短信</string>
    <string name="communication">交流</string>
    <string name="home">主页</string>
    <string name="memorandum">备忘录</string>
    <string name="settings">设置</string>
    <string name="reminder">提醒</string>
    <string name="click_to_test_heart_beat">点击卡片测心率</string>
    <string name="last_heart_rate">上一次测量</string>
    <string name="sms_protect">短信保护</string>
    <string name="suspicious_sms">可疑短信</string>
    <string name="heart_rate_detection">心率检测</string>
    <string name="start_to_test">开始测量</string>
    <string name="add_contact">添加联系人</string>
    <string name="input_contact">输入联系人</string>
    <string name="send_to_children_sms_tips">为您的亲人拦截到一条可以短信，请为您家人甄别可靠性</string>

    <string name="bpm_increase_tips">心率同比增长%s，注意适当休息，保持良好心情。</string>
    <string name="bpm_decrease_tips">心率同比降低%s，可以外出保持活力，保持良好心情。</string>
    <string name="bpm_no_change_tips">最近心率变化不大，可以适当休息或外出活动，保持良好心情</string>
</resources>
